# algorithm-visualization

./: .dockerignore  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: pages.yml
crates/algorithm_core/: Cargo.toml
crates/algorithm_core/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
deploy/: README.md
deploy/kubernetes/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
deploy/nginx/: default.conf
docs/: PLANNING.md
web/: index.html  package-lock.json  package.json
web/scripts/: build-wasm.mjs
web/src/: App.tsx  styles.css  types.ts
web/src/data/: catalog.ts  examples.ts
web/src/lib/: engine.ts  fallbackEngine.ts  random.ts  validators.test.ts  validators.ts
web/src/render/: canvasRenderer.ts
