[workspace]
members = [
    "crates/algorithm_core",
    "crates/wasm",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
algorithm_core = { path = "crates/algorithm_core" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
wasm-bindgen = "0.2"
